<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:minHeight="600dp"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="top"
            android:padding="5dp"
            android:theme="@style/bottom_nav_not_selected"
            >
            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:layout_width="wrap_content"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp"
                android:padding="5dp"
                app:strokeWidth="2dp"
                app:cardPreventCornerOverlap="true"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/likes_image"
                    android:layout_height="35dp"
                    android:layout_width="35dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/logo_2"
                    app:tint="@color/logocolor" />
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/songName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_name"
                android:theme="@style/songName"/>
            <TextView
                android:id="@+id/songkey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Song_key"
                android:theme="@style/songkey"/>

        </LinearLayout>


    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/songverse_number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/verse1"
            android:theme="@style/songverse_number"/>
        <TextView
            android:id="@+id/songverse1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verse"
            android:theme="@style/songverse"/>
        <TextView
            android:id="@+id/songcorus_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus_title"
            android:layout_marginTop="25dp"
            android:theme="@style/chorus_title"/>
        <TextView
            android:id="@+id/songchorus1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Song_chorus"
            android:theme="@style/chorus"/>

        <TextView
            android:id="@+id/songverse_number2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/verse2"
            android:theme="@style/songverse_number"/>
        <TextView
            android:id="@+id/songverse2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/songverse"/>
        <TextView
            android:id="@+id/songcorus_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus_title"
            android:layout_marginTop="25dp"
            android:theme="@style/chorus_title"/>
        <TextView
            android:id="@+id/songchorus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus"
            android:theme="@style/chorus"/>
        <TextView
            android:id="@+id/songverse_number3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/verse3"
            android:theme="@style/songverse_number"/>
        <TextView
            android:id="@+id/songverse3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/songverse"/>
        <TextView
            android:id="@+id/songcorus_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus_title"
            android:layout_marginTop="25dp"
            android:theme="@style/chorus_title"/>
        <TextView
            android:id="@+id/songchorus3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus"
            android:theme="@style/chorus"/>
        <TextView
            android:id="@+id/songverse_number4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verse4"
            android:layout_marginTop="25dp"
            android:theme="@style/songverse_number"/>
        <TextView
            android:id="@+id/songverse4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/songverse"/>
        <TextView
            android:id="@+id/songcorus_title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus_title"
            android:layout_marginTop="25dp"
            android:theme="@style/songverse_number"/>
        <TextView
            android:id="@+id/songchorus4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus"
            android:theme="@style/chorus"/>
        <TextView
            android:id="@+id/songverse_number5"
            android:text="@string/verse5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:theme="@style/songverse_number"/>
        <TextView
            android:id="@+id/songverse5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/songverse"/>
        <TextView
            android:id="@+id/songcorus_title5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus_title"
            android:layout_marginTop="25dp"
            android:theme="@style/chorus_title"/>
        <TextView
            android:id="@+id/songchorus5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus"
            android:theme="@style/chorus"/>
        <TextView
            android:id="@+id/songverse_number6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verse6"
            android:layout_marginTop="25dp"
            android:theme="@style/songverse_number"/>
        <TextView
            android:id="@+id/songverse6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/songverse"/>
        <TextView
            android:id="@+id/songcorus_title6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus_title"
            android:layout_marginTop="25dp"
            android:theme="@style/chorus_title"/>
        <TextView
            android:id="@+id/songchorus6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus"
            android:theme="@style/chorus"/>
        <TextView
            android:id="@+id/songverse_number7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verse7"
            android:layout_marginTop="25dp"
            android:theme="@style/songverse_number"/>
        <TextView
            android:id="@+id/songverse7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/songverse"/>
        <TextView
            android:id="@+id/songcorus_title7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus_title"
            android:layout_marginTop="25dp"
            android:theme="@style/chorus_title"/>
        <TextView
            android:id="@+id/songchorus7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Song_chorus"
            android:theme="@style/chorus"/>
    </LinearLayout>
</LinearLayout>